# binaryninja-depac-workflow

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  main.cpp
.github/workflows/: build.yaml
